Update index.html v2 marked.js

--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=naveenjoy.md">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>naveenjoy</title>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <style>
+        /* Optional: Add some basic styling */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+    </style>
 </head>
 <body>
-    <p>Redirecting to <a href="naveenjoy.md">naveenjoy.md</a>...</p>
+    <div id="markdown-content"></div>
+
+    <script>
+        // Fetch naveenjoy.md content and render it
+        fetch('naveenjoy.md')
+            .then(response => response.text())
+            .then(text => {
+                document.getElementById('markdown-content').innerHTML = marked(text);
+            })
+            .catch(error => console.error('Error fetching markdown:', error));
+    </script>
 </body>
 </html>
