--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>naveenjoy</title>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <style>
         /* Optional: Add some basic styling */
         body {
@@ -17,13 +16,20 @@
     <div id="markdown-content"></div>
 
     <script>
-        // Fetch naveenjoy.md content and render it
-        fetch('naveenjoy.md')
-            .then(response => response.text())
-            .then(text => {
-                document.getElementById('markdown-content').innerHTML = marked(text);
+        // Fetch naveenjoy.md content from GitHub API and render it
+        fetch('https://api.github.com/repos/NaveenCJoy/testing-github-pages/contents/naveenjoy.md')
+            .then(response => response.json())
+            .then(data => {
+                // Decode base64 encoded content
+                const markdownContent = atob(data.content);
+                // Convert Markdown to HTML
+                const converter = new showdown.Converter();
+                const htmlContent = converter.makeHtml(markdownContent);
+                // Display HTML content
+                document.getElementById('markdown-content').innerHTML = htmlContent;
             })
             .catch(error => console.error('Error fetching markdown:', error));
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
 </body>
 </html>
